# STM32F4-DISCO-TICTACTOE

./: .gitignore  .mxproject  CMakeLists.txt  ProgramFlow.drawio  README.md  TicTacToe.ioc  startup_stm32f429xx.s
Core/App/: app_main.c  app_main.h
Core/Bsp/: CMakeLists.txt  stm32f429i_discovery_ts.c
Core/Components/: CMakeLists.txt
Core/Inc/: app_lcd.h  app_ts.h  main.h  stm32f4xx_it.h  utils.h
Core/Src/: app_lcd.c  app_ts.c  gpio.c  main.c  stm32f4xx_it.c  usb_otg.c  utils.c
Core/uC-OS3/: CMakeLists.txt
Core/uC-OS3/Source/: lib_def.h
cmake/stm32cubemx/: CMakeLists.txt
